# cut-re3

./: .gitignore  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml
api/: Dockerfile  README.md  config.py  example_api_jobs.json  example_processes_list.json  main.py  requirements.txt
api/configs/: .env.example  config.py  dev_environment  dev_environment.example  platforms.py  prod_environment.example  providers.yml.example
api/initializers/db/: create_db_user.sh  create_jobs_table.sql
api/routes/: jobs.py  processes.py
api/scripts/: entrypoint.sh
api/src/: all_jobs.py  data_helper.py  db_handler.py  errors.py  geoserver.py  job.py  jobs.py  process.py  processes.py
frontend/: Dockerfile  Dockerfile.prod  package.json
frontend/addons/simulationTool/components/: SimulationJobExecutionInput.vue  SimulationProcess.vue  SimulationProcessJob.vue  SimulationTool.vue  (+4 more)
frontend/devtools/: webpack.dev.js
frontend/devtools/certificate/: localhost.key  localhost.pem
frontend/portal/simulation/: config.js  config.json  index.html
geoserver/: README.md
geoserver/configs/: geoserver.example  postgis.example
nginx/: default.conf
processes-api/: Dockerfile  README.md  config.yml  cut.config.yml  plugin.py  requirements.txt
processes-api/model1/: README.md  __init__.py  base.py  model1.py  pyproject.toml
processes-api/model1/manager/: __init__.py  base.py  dummy.py  tinydb_.py
test-model-server/: .gitignore  Dockerfile  agent.py  app.py  model.py  requirements.txt  websocket-test.html
test-model-server/data/: stadtrad_stationen.json
(+8 files in other folders)
